feat: getTask, swagger, docker,  makefile
