# internal/api/api.go
@@ -3,6 +3,7 @@ package api
 import (
 	"github.com/gofiber/fiber/v2"
 	"github.com/gofiber/fiber/v2/middleware/cors"
+	"github.com/gofiber/swagger"
 	"go.uber.org/zap"
 
 	"simple-service/internal/api/handlers"
@@ -28,14 +29,18 @@ func NewRouters(r *Routers, token string) *fiber.App {
 		MaxAge:        300,
 	}))
 
+	// Swagger UI (без авторизации)
+	app.Get("/swagger/*", swagger.HandlerDefault)
+
 	// Группа маршрутов с авторизацией
 	apiGroup := app.Group("/v1", middleware.JWTAuthorization(token))
 
 	// Инициализация обработчиков
 	taskHandler := handlers.NewTaskHandler(r.Service, r.Logger)
 
-	// Роут для создания задачи
+	// Роуты для задач
 	apiGroup.Post("/create_task", taskHandler.CreateTask)
+	apiGroup.Get("/tasks/:id", taskHandler.GetTask)
 
 	return app
 }
